buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
        maven { url = "https://oss.sonatype.org/content/repositories/snapshots/" }
        gradlePluginPortal()
    }
    dependencies {
        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.36.0'
    }
}

apply plugin: 'java-library'
apply plugin: 'com.vanniktech.maven.publish'

def projectName = 'digital'
group = 'com.github.tommyettinger'
version = "$VERSION_NAME"

import com.vanniktech.maven.publish.JavaLibrary
import com.vanniktech.maven.publish.JavadocJar
import com.vanniktech.maven.publish.SourcesJar

mavenPublishing {
    configure(new JavaLibrary(new JavadocJar.Javadoc(), new SourcesJar.Sources()))
}

plainJavadocJar.archiveBaseName.set(projectName)

[compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'

// Disable JDK 8's doclint
// http://blog.joda.org/2014/02/turning-off-doclint-in-jdk-8-javadoc.html
if (JavaVersion.current().isJava8Compatible()) {
    allprojects {
        tasks.withType(Javadoc).tap {
            configureEach {
                // The -quiet is because of some sort of weird JDK JavaCompiler bug:
                // https://discuss.gradle.org/t/passing-arguments-to-compiler-and-javadoc/1661
                options.addStringOption('Xdoclint:none,-missing', '-quiet')
            }
        }
    }
}

compileJava {
    sourceCompatibility = 8
    targetCompatibility = 8
    if (JavaVersion.current().isJava9Compatible()) {
        options.release.set(8)
    }
}

compileTestJava {
    sourceCompatibility = 8
    targetCompatibility = 8
    if (JavaVersion.current().isJava9Compatible()) {
        options.release.set(8)
    }
}

apply plugin: 'idea'
idea.module.excludeDirs += [file("src/main/java/com/github/tommyettinger/emu/"), file("docs/"), file("other/")]
[compileJava, compileTestJava, javadoc]*.exclude("com/github/tommyettinger/emu")

// JavaDocs will be published inside the docs/ folder, which you can easily put on GitHub Pages in your repo settings.
javadoc.destinationDir = file('docs/apidocs')

jar {
    archiveBaseName.set(projectName)
    manifest {
        attributes 'Implementation-Title': projectName, 'Implementation-Version': archiveVersion, 'Multi-Release': 'true'
    }
}

repositories {
    // You can uncomment mavenLocal() if you need self-built versions, but it can be a problem with GWT or other sources dependencies.
    mavenLocal()
    mavenCentral()
    google()
    // JitPack is a good repo to have if you depend on commit versions.
    // Having the below repo might cause problems if uploading to Maven Central.
    //maven { url = 'https://jitpack.io' }
}

dependencies {
    //noinspection GDXOutdatedVersionGradleGroovy
    testImplementation "com.badlogicgames.gdx:gdx:$gdxVersion"
    testImplementation "junit:junit:4.13.2"
    // don't require audio if a test doesn't need it; we don't use audio here.
    testImplementation("com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"){
        exclude group: "org.lwjgl", module: "lwjgl-openal"
        exclude group: "org.jcraft", module: "jorbis"
    }

    constraints{
        testImplementation("org.lwjgl:lwjgl:$lwjgl3Version")
        testImplementation("org.lwjgl:lwjgl-glfw:$lwjgl3Version")
        testImplementation("org.lwjgl:lwjgl-jemalloc:$lwjgl3Version")
        testImplementation("org.lwjgl:lwjgl-openal:$lwjgl3Version")
        testImplementation("org.lwjgl:lwjgl-opengl:$lwjgl3Version")
        testImplementation("org.lwjgl:lwjgl-stb:$lwjgl3Version")
    }

    testImplementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"

}

// ---- Java 25 LWJGL3 warning suppression / compatibility JVM args ----
// Thanks to https://github.com/tehnewb/Valthorne/blob/2d5bd29e5950f30be5d25b581b954802e6529be2/build.gradle#L79-L101 !
def lwjgl3JvmArgs = [
        // Required for Java 21+ restricted native access warnings
        "--enable-native-access=ALL-UNNAMED"

        // Other args are no longer needed because LWJGL 3.4.x changed how it works on Java 25 and up.
]

// Apply to any JavaExec tasks (e.g., application plugin's run task, custom runners)
tasks.withType(JavaExec).configureEach {
    jvmArgs += lwjgl3JvmArgs
}

// Apply to all tests
tasks.withType(Test).configureEach {
    jvmArgs += lwjgl3JvmArgs
}
